wip widget config

--- a/Resources/translations/resource.en.yml
+++ b/Resources/translations/resource.en.yml
@@ -1,2 +1,4 @@
 userlist_for_graph: Users
 resourcelist_for_graph: Resources
+pick_user_for_stat: Pick users
+select_users_to_add_to_graph: Select user to add to graph
