--- a/Resources/translations/resource.fr.yml
+++ b/Resources/translations/resource.fr.yml
@@ -1,2 +1,4 @@
 userlist_for_graph: Utilisateurs
 resourcelist_for_graph: Ressources
+pick_user_for_stat: Choisir des utilisateurs
+select_users_to_add_to_graph: Choix des utilisateurs à ajouter
